@@ -4,6 +4,13 @@ Changes in version 0.4.2 (released 2012-xx-xx)
 
  o TODO: fix the namedRanges to use the readColumns function
 
+ o Document if bold can be set on XSSF docs only. 
+ 
+ o New function readRows() similar to readColumns() for reading
+   accross the columns. 
+
+ o Removed a stray browser() in function .guess_cell_type
+
 
 Changes in version 0.4.1 (released 2012-01-22)
 
